# cuzk_tools

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  setup.py
config/: geomap_colours.yaml
launch/: elev_topo.launch  elevation.launch  topography.launch  viz_osm.launch
msg/: LineStringArray.msg  OrtoImage.msg  Polygons.msg  Topography.msg  TopographyCategory.msg
nodes/: elevation  gpkg_parser  orto2mesh  pcd2mesh  pose_elevation_srv  pose_elevation_tf  topography  viz_map
rviz/: elev_topo.rviz  elevation.rviz  new_topography_vis.rviz  polygon_array.rviz  topography_vis.rviz
scripts/: dmr5g.py  download_data.py  elevation  elevation_class.py  gpkg_parser.py  img2rgb.py  marker_pub  orto.py  orto2mesh  pcd2mesh  point2sjtsk.py  pose_elevation_srv  pose_elevation_tf  ros_open3d_conversion.py  topography  viz_map
src/cuzk_tools/: dmr5g.py  download_data.py  elevation_class.py  geomap_interpreter.py  gpkg_parser.py  img2rgb.py  interpolate_elevation.py  ros_open3d_conversion.py
srv/: ElevationGet.srv  ElevationPublish.srv  ElevationSetTF.srv  GeoPointElevationGet.srv  GetTopography.srv  MarkerGet.srv  PointElevationGet.srv  PoseElevationGet.srv
