<?xml version="1.0"?>
<package format="2">
  <name>cuzk_tools</name>
  <version>1.0.0</version>
  <description>Package for working with elevation and topography data from CUZK (ČÚZK---Český úřad zeměměřický a katastrální).</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <author email="herolada@fel.cvut.cz">Adam Herold</author>
  <maintainer email="herolada@fel.cvut.cz">Adam Herold</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>jsk_recognition_msgs</depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>unique_id</exec_depend>
  <!-- <exec_depend>osm_cartography</exec_depend> not used anymore -->
  <exec_depend>ros_numpy</exec_depend>
  <!-- <exec_depend>vigir_point_cloud_proc</exec_depend> -->
  <exec_depend>jsk_rviz_plugins</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-pillow</exec_depend>
  <exec_depend>python3-shapely</exec_depend>
  <exec_depend>python3-rtree</exec_depend>
  <exec_depend>python3-tqdm</exec_depend>
  <exec_depend>python3-pyproj</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <!--exec_depend>python3-fiona NEEDS A NEWER VERSION THAN THE ONE INSTALLED BY ROSDEP</exec_depend-->
  <!-- exec_depend>python3-pylas</exec_depend> does not resolve...-->


  <!-- NOT NECESSARY, ONLY USED IN LEGACY pcd2mesh.py... <exec_depend>python3-open3d 0.10.0 </exec_depend> is not available for FOCAL distro...-->
  <!-- NOT NECESSARY, ONLY USED IN LEGACY pcd2mesh.py... <exec_depend>python3-trimesh</exec_depend does not resolve-->
  <!-- NOT NECESSARY, ONLY USED IN LEGACY pcd2mesh.py... <exec_depend>python3-pymeshfix</exec_depend does not resolve-->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
