<?xml version="1.0"?>
<package format="2">
  <name>cuzk_tools</name>
  <version>1.0.0</version>
  <description>Package for working with elevation and topography data from CUZK (ČÚZK---Český úřad zeměměřický a katastrální).</description>

  <author email="herolada@fel.cvut.cz">Adam Herold</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-setuptools</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>geographic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>jsk_recognition_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>jsk_rviz_plugins</exec_depend>
  <exec_depend>osm_cartography</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-pyproj</exec_depend>
  <exec_depend>python3-rtree</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-shapely</exec_depend>
  <exec_depend>python3-tqdm</exec_depend>
  <exec_depend>ros_numpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>unique_id</exec_depend>

  <test_depend>python3-catkin-lint</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>roslint</test_depend>

  <!--exec_depend>python3-fiona NEEDS A NEWER VERSION THAN THE ONE INSTALLED BY ROSDEP</exec_depend-->
  <!-- exec_depend>python3-pylas-pip</exec_depend> does not resolve...-->
  <!-- exec_depend>laszip</exec_depend> does not resolve..., download https://github.com/LAStools/LAStools and build locally -->

  <!-- NOT NECESSARY, ONLY USED IN LEGACY pcd2mesh.py... <exec_depend>python3-open3d 0.10.0 </exec_depend> is not available for FOCAL distro...-->
  <!-- NOT NECESSARY, ONLY USED IN LEGACY pcd2mesh.py... <exec_depend>python3-trimesh</exec_depend does not resolve-->
  <!-- NOT NECESSARY, ONLY USED IN LEGACY pcd2mesh.py... <exec_depend>python3-pymeshfix</exec_depend does not resolve-->
</package>
